# customerlens

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: main.py
app/_pages/: graph_page.py  qa_page.py  report_page.py
app/components/: graph_viz.py
app/reports/: report_builder.py
config/: settings.py
graph/loaders/: graph_loader.py  neo4j_client.py  schema_loader.py
graph/queries/: campaign_queries.py  report_queries.py  segment_queries.py
graph/schema/: constraints.cypher  node_labels.md
llm/chains/: agent_chain.py  qa_chain.py  report_chain.py
llm/prompts/: cypher_prompt.py
llm/tools/: graph_tools.py
notebooks/: 01_data_exploration.ipynb  02_graph_exploration.ipynb
pipeline/generation/: generate_data.py
pipeline/ingestion/: run_ingestion.py
pipeline/transformation/: rfm_segmentation.py
scripts/: ask.py  reset_graph.py
tests/integration/: test_graph_loader.py  test_qa_chain.py
tests/unit/: test_data_quality.py  test_rfm.py
