[project]
name = "customerlens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.84.0",
    "faker>=40.5.1",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.4",
    "langchain-community>=0.4.1",
    "langchain-neo4j>=0.8.0",
    "neo4j>=6.1.0",
    "pandas>=2.3.3",
    "pydantic-settings>=2.13.1",
    "pyvis>=0.3.2",
    "sdv>=1.34.2",
    "streamlit>=1.55.0",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=9.0.2",
]
